@@ -1,3 +1,8 @@
+2003-07-15  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tclCmdIL.c (SortCompare): Cleared up confusing error
+	message. [Bug 771539]
+
 2003-07-15  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/Makefile: Rewrote buildsystem for Mac OS X framework build
